@@ -44,7 +44,7 @@ public class SecurityConfig {
                 .cors(corsCustomizer -> corsCustomizer.configurationSource(request -> {
                     CorsConfiguration configuration = new CorsConfiguration();
 
-                    configuration.setAllowedOrigins(List.of(frontendUrl, "http://localhost:63342", "http://localhost:5173", "http://localhost:8080"));
+                    configuration.setAllowedOrigins(Collections.singletonList(frontendUrl));
                     configuration.setAllowedMethods(Collections.singletonList("*"));
                     configuration.setAllowCredentials(true);
                     configuration.setAllowedHeaders(Collections.singletonList("*"));
@@ -58,16 +58,16 @@ public class SecurityConfig {
                 .httpBasic(AbstractHttpConfigurer::disable)
                 .addFilterBefore(new JWTFilter(jwtUtil), OAuth2LoginAuthenticationFilter.class)
                 .oauth2Login(oauth -> oauth
-                                .userInfoEndpoint(userInfoEndpointConfig -> userInfoEndpointConfig
-                                        .userService(customOAuth2UserService))
-                                .successHandler(customSuccessHandler)
+                        .userInfoEndpoint(userInfoEndpointConfig -> userInfoEndpointConfig
+                                .userService(customOAuth2UserService))
+                        .successHandler(customSuccessHandler)
 //                        .failureHandler(customFailureHandler) // TODO 로그인 실패 처리
-                                .authorizationEndpoint(endpoint -> endpoint
-                                        .baseUri("/api/oauth2/authorization")
-                                )
-                                .redirectionEndpoint(endpoint -> endpoint
-                                        .baseUri("/api/login/oauth2/code/*")
-                                )
+                        .authorizationEndpoint(endpoint -> endpoint
+                                .baseUri("/api/oauth2/authorization")
+                        )
+                        .redirectionEndpoint(endpoint -> endpoint
+                                .baseUri("/api/login/oauth2/code/*")
+                        )
                 )
                 //API swagger로직 추가
                 .authorizeHttpRequests(auth -> auth
